scrollbar fixed

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -68,5 +68,5 @@ a:before {
 }
 
 .no-overflow{
-    overflow: hidden;
+    overflow:unset;
 }
